--- a/backend-web/pom.xml
+++ b/backend-web/pom.xml
@@ -48,6 +48,12 @@
 			<version>4.29.2</version>
 		</dependency>
 
+		<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
